SF Bootcamp/force-app/main/default/objects/Loyalty_Summary__c/Loyalty_Summary__c.object-meta.xml
<CustomObject>
    <label>Loyalty Summary</label>
    <nameField>
        <label>Loyalty Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loyalty Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>