SF Bootcamp/force-app/main/default/objects/Loyalty_Summary__c/fields/Date_Extracted__c.field-meta.xml
<CustomField>
    <fullName>Date_Extracted__c</fullName>
    <label>Date Extracted</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>