SF Bootcamp/force-app/main/default/objects/Loyalty_Summary__c/fields/Loyalty__c.field-meta.xml
<CustomField>
    <fullName>Loyalty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loyalty</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loyalty Summaries (Loyalty)</relationshipLabel>
    <relationshipName>Loyalty_Summaries1</relationshipName>
    <type>Lookup</type>
</CustomField>